First basic features implemented

--- a/planet.kv
+++ b/planet.kv
@@ -1,3 +1,11 @@
+<Planet>:
+    size: 25, 25
+    canvas:
+        Ellipse:
+            pos: self.pos
+            size: self.size
+            source: './media/textures/sun.png'
+
 <Mainscreen>:
     canvas:
         Rectangle:
