New textures and lots of stuff the 2nd

--- a/planet.kv
+++ b/planet.kv
@@ -18,4 +18,11 @@
         Rectangle:
             pos: self.pos
             size: self.size
-            source: './media/background/background_menu.png'
+            source: './media/background/background_menu.jpg'
+
+<Settingsscreen>:
+    canvas:
+        Rectangle:
+            pos: self.pos
+            size: self.size
+            source: './media/background/background_settings.png'
