Added lots of stuff...

--- a/planet.kv
+++ b/planet.kv
@@ -26,3 +26,10 @@
             pos: self.pos
             size: self.size
             source: './media/background/background_settings.png'
+
+<Savegamescreen>:
+    canvas:
+        Rectangle:
+            pos: self.pos
+            size: self.size
+            source: './media/background/background_savegame.png'
