Upgrade to C-Core, still much to be done

--- a/planet.kv
+++ b/planet.kv
@@ -5,6 +5,11 @@
             pos: self.pos
             size: self.size
             source: './media/textures/sun.png'
+        Ellipse:
+            pos: self.pos
+            size: self.size
+            source: './media/textures/sun.png'
+
 
 <Mainscreen>:
     canvas:
