Select-mode, tutorial, spheric diameter calculation, multishot-mode and other things i forgot to mention

--- a/planet.kv
+++ b/planet.kv
@@ -10,7 +10,7 @@
         Rectangle:
             pos: self.pos
             size: self.size
-            source: './media/background/background_menu.jpg'
+            source: './media/background/background_menu.png'
 
 <Settingsscreen>:
     canvas:
