--- a/planet.kv
+++ b/planet.kv
@@ -25,3 +25,10 @@
             pos: self.pos
             size: self.size
             source: './media/background/background_savegame.png'
+
+<Creditsscreen>:
+    canvas:
+        Rectangle:
+            pos: self.pos
+            size: self.size
+            source: './media/background/background_settings.png'
