Added trajectory calculation, experimenting with multitouch possibilities.

--- a/planet.kv
+++ b/planet.kv
@@ -1,6 +1,7 @@
 <Mainscreen>:
     canvas:
         Rectangle:
+            group: 'background'
             pos: self.pos
             size: self.size
             source: './media/background/background.png'
